# veil-mcp

./: .gitignore  CONTRIBUTING.md  LAUNCH.md  LICENSE  MANIFEST.in  Makefile  PUBLISHING.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
configs/: claude-desktop-unsafe.json  claude-desktop-veil.json  cursor-mcp-unsafe.json  cursor-mcp-veil.json
demos/: malicious_mcp_server.py
policies/: mcp-demo.json  mcp-local-dev.json
scripts/: render_demo_gif.py  smoke_mcp_proxy.py
src/veil_mcp/: __init__.py  policy.py  proxy.py
tests/: test_policy.py  test_proxy.py
